# slack-mcp

./: .dockerignore  .env.dist  .env.example  .gitignore  Dockerfile  README.md  backend_runtime.py  docker-compose.yml  fastmcp.json  go.mod  go.sum  package.json  pyproject.toml  server.py
.github/: dependabot.yml
.github/workflows/: integration-tests.yaml  release-image.yaml  release.yaml  security-trivy.yaml  unit-tests.yaml
cmd/slack-mcp-server/: main.go
docs/: 01-authentication-setup.md  02-installation.md  03-configuration-and-usage.md  configuration.md  tool-reference.md
pkg/handler/: channels_test.go  conversations.go  conversations_test.go  usergroups.go
pkg/limiter/: retry.go  retry_test.go
pkg/provider/: api.go  api_cache_test.go  api_channels_test.go  api_edge_fallback_test.go
pkg/provider/edge/: client.go  edge.go  prefs.go  slacker.go  slacker_test.go  users.go
pkg/server/: server.go  server_test.go
pkg/server/auth/: sse_auth.go
pkg/test/util/: mcp.go
scripts/: run_server.py
